--- a/src/view/pages/form/index.ejs
+++ b/src/view/pages/form/index.ejs
@@ -4,11 +4,12 @@
 		<div class="container" style="text-align: center">
 			<div>
 				<h1 style="    margin-bottom: 30px">Bounty Program Submission</h1>
+				<p>For full details on the bounty program please visit <a href="http://activity.lambda.im/">this page</a>  </p>
 				<p style="opacity:0.8;font-size:16px;text-align: left,margin-bottom: 30px">
-					<p>Being dishonest on this form will result in immediate disqualification.    </p>
-					<p> Only answer questions that apply to your selected task(s)    </p>
-					<p>If you find an issue after submitting, please contact us at    </p>
-					<p>For full details on the bounty program please visit ---------  </p>
+					<p> Being dishonest on this form will result in immediate disqualification.    </p>
+					<p> Only answer questions that apply to your selected task(s)  </p>
+					<p> If you have issues submitting your application, please contact us at    </p>
+
 				</p>
 
 
@@ -23,12 +24,12 @@
 	<section id="roadmap" class="use roadmap">
 		<div class="container" >
 			<div class="wrap-contact100" id="fromresult" style="color: black" >
-			成功后的提示
+			Success
 			</div>
 			<div class="wrap-contact100" id="fromdiv">
 				<form id="form" class="contact100-form validate-form">
 					<a class="contact100-form-title">
-						Vulnerability
+						Contact Us
 					</a>
 
 					<div class="wrap-input100 validate-input" data-validate="Name is required">
