--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -5,18 +5,19 @@
 			<div>
 				<h1 style="    margin-bottom: 30px">Lambda Bounty Program</h1>
 				<p style="opacity:0.8;font-size:16px;text-align: left,margin-bottom: 30px">
-					Thank you for participating in Lambda’s AIRDROP and making it a grand success. We have completed the AIRDROP and now we move onto Bounty Campaign, so we are excited to invite everyone in our community to join that as well and make it an even bigger success.
+					Welcome to Lambda's Bounty Program !! Follow the simple instructions given below and get rewarded in LAMB
 
 				</p>
-				<h2 style="    margin-bottom: 30px" >6 DAYS TO GOT MAXIMUM 200 LAMB in a week</h2>
+				<h2 style="    margin-bottom: 30px" >You can earn up to 50 Lamb tokens during this campaign</h2>
 
 
 				      					<ul>
-				      						<li>Refer link to your friends to get MORE LAMB .</li>
-				      						<li>Note: You must be part of our telegram group.</li>
+				      						<li>Get Another 5 Lamb by refering your friends to participate our bounty program.</li>
+				      						<li>This campaign will last from July 2nd to July.16th </li>
+
 													<p id="ethbtn" >
 														<input id="ethaddress"  class="input100" type="text" name="ethaddress" placeholder="Your ETH wallet address">
-														<a id="ethaddressbtn" class="btncom" >Get Refer link </a>
+														<a id="ethaddressbtn" class="btncom" >Button to click Here to go</a>
 													</p>
 													<div id="link" >
 													Refer link  <a target="_blank" id="linkhref" href="https://mp.weixin.qq.com/wxopen/devprofile" > https://mp.weixin.qq.com/wxopen/devprofile</a>
@@ -55,7 +56,7 @@
       			<div class="p-l-0 col-sm-10 col-xxs-10">
       				<div class="year-list">
 
-      					<h2 class="title">Follow Lambda’s twitter </h2>
+      					<h2 class="title"> Joining Lambda Telegram Group </h2>
 
       				</div>
       			</div>
@@ -72,7 +73,7 @@
       			<div class="p-l-0 col-sm-10 col-xxs-10">
       				<div class="year-list">
 
-      					<h2 class="title">Retweet Lambda’s Telegram pinned message on Twitter </h2>
+      					<h2 class="title">Following Lambda’s twitter account</h2>
 
       				</div>
       			</div>
@@ -89,19 +90,24 @@
       			<div class="p-l-0 col-sm-10 col-xxs-10">
       				<div class="year-list">
 
-      					<h2 class="title">Follow Lambda’s Medium </h2>
+      					<h2 class="title">Retweeting Lambda’s pinned message on Twitter </h2>
 
       				</div>
       			</div>
       		</div>
 					<div class="row">
 						<div class="col-sm-2 col-xxs-2">
-
+							<div class="nc-wrapper">
+      					<span class="left-num color-show">4</span>
+      					<div class="circle-icon ">
+      						<i></i>
+      					</div>
+      				</div>
 						</div>
 
       			<div class="p-l-0 col-sm-10 col-xxs-10">
       				<div class="year-list">
-
+								 <h2 class="title">Following Lambda’s Medium</h2>
 
       				</div>
       			</div>
