--- a/src/view/partial/header.ejs
+++ b/src/view/partial/header.ejs
@@ -30,23 +30,23 @@
 					</div>
 					<% } else if(pageId === 'indexEn'){ %>
 						<div class="nav-item mao">
-							<a href="javascript:;" >
-								APPLICATION SCENARIOS
+							<a target="_blank" href="https://www.lambda.im/en/index.html" >
+								Home
 							</a>
 						</div>
 						<div class="nav-item mao" >
-							<a href="javascript:;">
-								WORKING PRINCIPLE
+							<a target="_blank" href="http://www.lambda.im/doc/Lambda-WhitePaper-en.pdf">
+								Download whitepaper
 							</a>
 						</div>
 						<div class="nav-item mao" >
-							<a href="javascript:;">
-								ECOSYSTEM
+							<a target="_blank" href="https://twitter.com/Lambda39241229">
+								Twitter
 							</a>
 						</div>
 						<div class="nav-item mao" >
-							<a href="javascript:;" >
-								ROADMAP
+							<a target="_blank" href="https://t.me/Lambdaim" >
+								Telegram
 							</a>
 						</div>
 					<% } %>
@@ -69,10 +69,10 @@
 							<li class="mao"><a href="javascript:;">生态系统</a></li>
 							<li class="mao"><a href="javascript:;">路线图</a></li>
 							<% } else if(pageId === 'indexEn'){ %>
-								<li class="mao"><a href="javascript:;">APPLICATION SCENARIOS</a></li>
-								<li class="mao"><a href="javascript:;">WORKING PRINCIPLE</a></li>
-								<li class="mao"><a href="javascript:;">ECOSYSTEM</a></li>
-								<li class="mao"><a href="javascript:;">ROADMAP</a></li>
+								<li target="_blank" class="mao"><a href="https://www.lambda.im/en/index.html">Home</a></li>
+								<li target="_blank" class="mao"><a href="http://www.lambda.im/doc/Lambda-WhitePaper-en.pdf">Download whitepaper</a></li>
+								<li target="_blank" class="mao"><a href="https://twitter.com/Lambda39241229">Twitter</a></li>
+								<li target="_blank" class="mao"><a href="https://t.me/Lambdaim">Telegram</a></li>
 							<% } %>
 						</ul>
 					</div>
