--- a/src/view/pages/form/index.ejs
+++ b/src/view/pages/form/index.ejs
@@ -3,11 +3,10 @@
 	<section class="banner-contents">
 		<div class="container" style="text-align: center">
 			<div>
-				<h1 style="    margin-bottom: 30px">Bounty Program Submission</h1>
-				<p>For full details on the bounty program please visit <a href="http://activity.lambda.im/">this page</a>  </p>
+				<h1 style="    margin-bottom: 30px">Submit to verify your qualification </h1>
+
 				<p style="opacity:0.8;font-size:16px;text-align: left,margin-bottom: 30px">
 					<p> Being dishonest on this form will result in immediate disqualification.    </p>
-					<p> Only answer questions that apply to your selected task(s)  </p>
 					<p> If you have issues submitting your application, please contact us at    </p>
 
 				</p>
@@ -49,7 +48,7 @@
 					</div>
 					<div class="wrap-input100 validate-input" data-validate="Name is required">
 						<a class="contact100-form-btn" id="twitterscreenshot_a">
-							upload file
+							select file
 						</a>
 						<p style="color: black">
 						<input  accept="image/png, image/jpeg, image/gif, image/jpg" class="input100 fileinput" type="file" id="twitterscreenshot" name="Twitterscreenshot">
@@ -65,7 +64,7 @@
 					</div>
 					<div class="wrap-input100 validate-input" data-validate="Name is required">
 						<a class="contact100-form-btn" id="Mediumscreenshot_a">
-							upload file
+							select file
 						</a>
 						<input  accept="image/png, image/jpeg, image/gif, image/jpg" class="input100 fileinput" type="file" id="Mediumscreenshot">
 						<p  id="Mediumscreenshot_url" class="imgurl"  style="color: black">
