--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -3,17 +3,19 @@
 	<section class="banner-contents">
 		<div class="container" style="text-align: center">
 			<div>
-				<h1 style="    margin-bottom: 30px">Lambda Bounty Program</h1>
+				<h1 style="    margin-bottom: 30px"> Welcome to Lambda Bounty Program！！</h1>
 				<p style="opacity:0.8;font-size:16px;text-align: left,margin-bottom: 30px">
-					Welcome to Lambda's Bounty Program !! Follow the simple instructions given below and get rewarded in LAMB
+					Follow the simple instructions given below and get rewarded in LAMB
 
 				</p>
-				<h2 style="    margin-bottom: 30px" >You can earn up to 50 Lamb tokens during this campaign</h2>
+				<!-- <h2 style="    margin-bottom: 30px" >You can earn up to 50 Lamb tokens during this campaign</h2> -->
 
 
 				      					<ul>
-				      						<li>Get Another 5 Lamb by refering your friends to participate our bounty program.</li>
+				      						<li>Get Another 5 Lamb by referring your friends to participate our bounty program
+Campaign Rules.</li>
 				      						<li>This campaign will last from July 2nd to July.16th </li>
+													<li>You can earn up to 50 Lamb tokens during this campaign </li>
 
 													<p id="ethbtn" >
 														<input id="ethaddress"  class="input100" type="text" name="ethaddress" placeholder="Your ETH wallet address">
@@ -39,7 +41,7 @@
 
 	<section id="roadmap" class="use roadmap">
 		<div class="container">
-			<h1>Got 10 LAMB for</h1>
+			<h1>Get 10 LAMB by </h1>
 
 			<div class="row" style="position:relative">
       	<div class="col-md-offset-1 col-md-11 box-wrapper">
