--- a/src/view/pages/form/index.ejs
+++ b/src/view/pages/form/index.ejs
@@ -1,6 +1,6 @@
 <div id="body">
 	<div class="bg"></div>
-	<section class="banner-contents">
+	<section class="banner-contents" style=" margin-bottom: 0px;padding-bottom:0px">
 		<div class="container" style="text-align: center">
 			<div>
 				<h1 style="    margin-bottom: 30px">Submit to verify your qualification </h1>
@@ -23,7 +23,10 @@
 	<section id="roadmap" class="use roadmap">
 		<div class="container" >
 			<div class="wrap-contact100" id="fromresult" style="color: black" >
-			Success
+			<div>Thanks for participate our bounty program.
+					Get Another 5 Lamb by referring your friends.
+					Your referral link:</div>
+			You	Refer link  <a target="_blank" id="linkhref" href="" style="font-size: 20px;color: #2acde5;word-wrap: break-word" > </a>
 			</div>
 			<div class="wrap-contact100" id="fromdiv">
 				<form id="form" class="contact100-form validate-form">
