--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -1,6 +1,6 @@
 <div id="body">
 	<div class="bg"></div>
-	<section class="banner-contents">
+	<section class="banner-contents" style=" margin-bottom: 0px;padding-bottom:0px">
 		<div class="container" style="text-align: center">
 			<div>
 				<h1 style="    margin-bottom: 30px"> Welcome to Lambda Bounty Program！！</h1>
@@ -19,17 +19,18 @@ Campaign Rules.</li>
 
 													<p id="ethbtn" >
 														<input id="ethaddress"  class="input100" type="text" name="ethaddress" placeholder="Your ETH wallet address">
-														<a id="ethaddressbtn" class="btncom" >Button to click Here to go</a>
+														<a id="ethaddressbtn" class="btncom" >click Here to go</a>
 													</p>
 													<div id="link" >
-													Refer link  <a target="_blank" id="linkhref" href="https://mp.weixin.qq.com/wxopen/devprofile" > https://mp.weixin.qq.com/wxopen/devprofile</a>
-													<p><a id="ethaddressfrom" class="btncom" >Submit a Vulnerability </a></p>
+												You	Refer link  <a target="_blank" id="linkhref" href="" style="font-size: 20px;color: #2acde5;    word-wrap: break-word" > </a>
+													<p><a id="ethaddressfrom" class="btncom" >Submit </a></p>
 													</div>
 
 
 
 
 				      					</ul>
+
 
 
 			</div>
@@ -41,18 +42,14 @@ Campaign Rules.</li>
 
 	<section id="roadmap" class="use roadmap">
 		<div class="container">
-			<h1>Get 10 LAMB by </h1>
+			<h1>Get 50 LAMB by </h1>
 
 			<div class="row" style="position:relative">
       	<div class="col-md-offset-1 col-md-11 box-wrapper">
       		<div class="row">
       			<div class="col-sm-2 col-xxs-2">
       				<div class="nc-wrapper">
-      					<span class="left-num color-show">1</span>
-      					<div class="circle-icon ">
-      						<div class="column-line "></div>
-      						<i></i>
-      					</div>
+
       				</div>
       			</div>
       			<div class="p-l-0 col-sm-10 col-xxs-10">
@@ -65,12 +62,7 @@ Campaign Rules.</li>
       		</div>
       		<div class="row">
       			<div class="col-sm-2 col-xxs-2">
-      				<div class="nc-wrapper">
-      					<span class="left-num color-show">2</span>
-      					<div class="circle-icon">
-      						<i></i>
-      					</div>
-      				</div>
+
       			</div>
       			<div class="p-l-0 col-sm-10 col-xxs-10">
       				<div class="year-list">
@@ -82,12 +74,7 @@ Campaign Rules.</li>
       		</div>
       		<div class="row">
       			<div class="col-sm-2 col-xxs-2">
-      				<div class="nc-wrapper">
-      					<span class="left-num color-show">3</span>
-      					<div class="circle-icon ">
-      						<i></i>
-      					</div>
-      				</div>
+
       			</div>
       			<div class="p-l-0 col-sm-10 col-xxs-10">
       				<div class="year-list">
@@ -99,12 +86,7 @@ Campaign Rules.</li>
       		</div>
 					<div class="row">
 						<div class="col-sm-2 col-xxs-2">
-							<div class="nc-wrapper">
-      					<span class="left-num color-show">4</span>
-      					<div class="circle-icon ">
-      						<i></i>
-      					</div>
-      				</div>
+
 						</div>
 
       			<div class="p-l-0 col-sm-10 col-xxs-10">
