--- a/src/view/layout/html.ejs
+++ b/src/view/layout/html.ejs
@@ -11,4 +11,15 @@
 	<%= header %>
 	<%= content %>
 	<%= footer %>
+	
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121455265-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-121455265-1');
+
+
+</script>
 </body>
