--- a/src/view/partial/header.ejs
+++ b/src/view/partial/header.ejs
@@ -49,6 +49,11 @@
 								Telegram
 							</a>
 						</div>
+						<div class="nav-item mao" >
+							<a target="_blank" href="https://medium.com/@Lambdaim" >
+								Medium
+							</a>
+						</div>
 					<% } %>
 					<div class="nav-item" style="float:right">
 						<!-- <a href="/en/index.html" style="display: inline-block; width: 30px; height: 20px;"><img style="width: 100%; height:100%" src="<%= require('../../img/public/english@2x.png') %>" alt=""></a>
