--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -11,25 +11,7 @@
 				<!-- <h2 style="    margin-bottom: 30px" >You can earn up to 50 Lamb tokens during this campaign</h2> -->
 
 
-				      					<ul>
-				      						<li>Get Another 5 Lamb by referring your friends to participate our bounty program
-Campaign Rules.</li>
-				      						<li>This campaign will last from July 2nd to July.16th </li>
-													<li>You can earn up to 50 Lamb tokens during this campaign </li>
 
-													<p id="ethbtn" >
-														<input id="ethaddress"  class="input100" type="text" name="ethaddress" placeholder="Your ETH wallet address">
-														<a id="ethaddressbtn" class="btncom" >click Here to go</a>
-													</p>
-													<div id="link" >
-												You	Refer link  <a target="_blank" id="linkhref" href="" style="font-size: 20px;color: #2acde5;    word-wrap: break-word" > </a>
-													<p><a id="ethaddressfrom" class="btncom" >Submit </a></p>
-													</div>
-
-
-
-
-				      					</ul>
 
 
 
@@ -40,12 +22,24 @@ Campaign Rules.</li>
 
 
 
-	<section id="roadmap" class="use roadmap">
+	<section id="roadmap" class="use roadmap" style="padding:0 0 ">
 		<div class="container">
-			<h1>Get 50 LAMB by </h1>
-
 			<div class="row" style="position:relative">
       	<div class="col-md-offset-1 col-md-11 box-wrapper">
+					<div class="row">
+      			<div class="col-sm-2 col-xxs-2">
+      				<div class="nc-wrapper">
+
+      				</div>
+      			</div>
+      			<div class="p-l-0 col-sm-10 col-xxs-10">
+      				<div class="year-list">
+
+      					<h2 class="title">Get 10 LAMB by </h2>
+
+      				</div>
+      			</div>
+      		</div>
       		<div class="row">
       			<div class="col-sm-2 col-xxs-2">
       				<div class="nc-wrapper">
@@ -55,7 +49,7 @@ Campaign Rules.</li>
       			<div class="p-l-0 col-sm-10 col-xxs-10">
       				<div class="year-list">
 
-      					<h2 class="title"> Joining Lambda Telegram Group </h2>
+      					<h2 class="title"> 1,Joining Lambda Telegram Group </h2>
 
       				</div>
       			</div>
@@ -67,7 +61,7 @@ Campaign Rules.</li>
       			<div class="p-l-0 col-sm-10 col-xxs-10">
       				<div class="year-list">
 
-      					<h2 class="title">Following Lambda’s twitter account</h2>
+      					<h2 class="title">2,Following Lambda’s twitter account</h2>
 
       				</div>
       			</div>
@@ -79,7 +73,7 @@ Campaign Rules.</li>
       			<div class="p-l-0 col-sm-10 col-xxs-10">
       				<div class="year-list">
 
-      					<h2 class="title">Retweeting Lambda’s pinned message on Twitter </h2>
+      					<h2 class="title">3,Retweeting Lambda’s pinned message on Twitter </h2>
 
       				</div>
       			</div>
@@ -91,7 +85,7 @@ Campaign Rules.</li>
 
       			<div class="p-l-0 col-sm-10 col-xxs-10">
       				<div class="year-list">
-								 <h2 class="title">Following Lambda’s Medium</h2>
+								 <h2 class="title">4,Following Lambda’s Medium</h2>
 
       				</div>
       			</div>
@@ -99,6 +93,26 @@ Campaign Rules.</li>
 
       	</div>
       </div>
+			<ul style="text-align: center">
+				<li>Get Another 5 Lamb by referring your friends to participate our bounty program
+Campaign Rules.</li>
+				<li>This campaign will last from  July. 3rd to July.17th  </li>
+				<li>You can earn up to 50 Lamb tokens during this campaign </li>
+
+
+				</div>
+
+
+
+
+			</ul>
+			<p id="ethbtn" style="    text-align: center">
+				<input id="ethaddress"  class="input100" type="text" name="ethaddress" placeholder="Enter Your ETH wallet address">
+				<a id="ethaddressbtn" class="btncom" >Here to go</a>
+			</p>
+			<div id="link" style="    text-align: center">
+		You	Refer link  <a target="_blank" id="linkhref" href="" style="font-size: 20px;color: #2acde5;    word-wrap: break-word" > </a>
+			<p><a id="ethaddressfrom" class="btncom" >Submit </a></p>
 		</div>
 	</section>
 
