--- a/src/css/common/header.less
+++ b/src/css/common/header.less
@@ -32,6 +32,7 @@ header{
   		margin-left: 45px;
 			margin-top: 19px;
   		.nav-item{
+				display: inline-block;
   			padding: 16px 26px;
   			border-top: 3px solid;
   			border-color: transparent;
@@ -230,6 +231,7 @@ header{
     padding-top: 60px;
     display: none;
     .nav-item{
+			display: inline-block;
       padding: 10px 0;
       background: rgba(0,0,0,0.1);
       border-bottom: 1px solid rgba(255, 255, 255, 0.2);
