--- a/src/css/page/from.less
+++ b/src/css/page/from.less
@@ -392,3 +392,14 @@ textarea.input100 {
 #fromresult{
   display: none;
 }
+.Explain{
+  font-size: 12px;
+  color: #00b7ff;
+  a:link{color: #00b7ff}
+
+a:visited{color: #00b7ff}
+
+a:hover{color: #00b7ff}
+
+a:active{color: #00b7ff}
+}
