--- a/src/view/pages/form/index.ejs
+++ b/src/view/pages/form/index.ejs
@@ -5,11 +5,11 @@
 			<div>
 				<h1 style="    margin-bottom: 30px">Submit to verify your qualification </h1>
 
-				<p style="opacity:0.8;font-size:16px;text-align: left,margin-bottom: 30px">
+				<!-- <p style="opacity:0.8;font-size:16px;text-align: left,margin-bottom: 30px">
 					<p> Being dishonest on this form will result in immediate disqualification.    </p>
 					<p> If you have issues submitting your application, please contact us at    </p>
 
-				</p>
+				</p> -->
 
 
 
@@ -30,24 +30,25 @@
 			</div>
 			<div class="wrap-contact100" id="fromdiv">
 				<form id="form" class="contact100-form validate-form">
-					<a class="contact100-form-title">
-						Contact Us
-					</a>
+
 
 					<div class="wrap-input100 validate-input" data-validate="Name is required">
 						<input class="input100" type="text" id="ethaddress_input" name="ethaddress" placeholder="Your ETH wallet address">
-						<span class="focus-input100-1"></span>
-						<span class="focus-input100-2"></span>
+						<p  class="Explain"  style="color: black">
+							Your ETH wallet address ( listed as user’s unique ID for our verification, link was entered by participant from the first page)
+					  </p>
 					</div>
 					<div class="wrap-input100 validate-input" data-validate="Name is required">
 						<input class="input100" type="text" name="telegram" placeholder="Your telegram user name ">
-						<span class="focus-input100-1"></span>
-						<span class="focus-input100-2"></span>
+						<p  class="Explain" >
+							<a target="_blank" href="https://t.me/HelloLambda">Joining Lambda Telegram Group</a>
+					  </p>
 					</div>
 					<div class="wrap-input100 validate-input" data-validate="Name is required">
-						<input class="input100" type="text" name="twitter" placeholder="Your Twitter user’s name ">
-						<span class="focus-input100-1"></span>
-						<span class="focus-input100-2"></span>
+						<input class="input100" type="text" name="twitter" placeholder="Your Twitter user name ">
+						<p  class="Explain" >
+						 <a target="_blank" href="https://twitter.com/Lambdaim">	Following Lambda’ twitter account</a> 
+					  </p>
 					</div>
 					<div class="wrap-input100 validate-input" data-validate="Name is required">
 						<a class="contact100-form-btn" id="twitterscreenshot_a">
@@ -70,6 +71,9 @@
 							select file
 						</a>
 						<input  accept="image/png, image/jpeg, image/gif, image/jpg" class="input100 fileinput" type="file" id="Mediumscreenshot">
+						<p  class="Explain" >
+							 <a target="_blank" href="https://medium.com/@Lambdaim">Following Lambda’s Medium</a> 
+					  </p>
 						<p  id="Mediumscreenshot_url" class="imgurl"  style="color: black">
 						Please upload the screenshot to prove you followed our Medium
 					  </p>
