--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -88,24 +88,29 @@
 								 <h2 class="title">4,Following Lambda’s Medium</h2>
 
       				</div>
+							<ul style="">
+
+								<li>Get Another 5 Lamb by referring your friends to participate our bounty program.</li>
+								<li style="">&nbsp;</li>
+				<li style="">
+				Campaign Rules:</li>
+								<li>This campaign will last from  July. 3rd to July.17th  </li>
+								<li>You can earn up to 50 Lamb tokens during this campaign </li>
+
+
+								</div>
+
+
+
+
+							</ul>
       			</div>
+
       		</div>
 
       	</div>
       </div>
-			<ul style="text-align: center">
-				<li>Get Another 5 Lamb by referring your friends to participate our bounty program
-Campaign Rules.</li>
-				<li>This campaign will last from  July. 3rd to July.17th  </li>
-				<li>You can earn up to 50 Lamb tokens during this campaign </li>
 
-
-				</div>
-
-
-
-
-			</ul>
 			<p id="ethbtn" style="    text-align: center">
 				<input id="ethaddress"  class="input100" type="text" name="ethaddress" placeholder="Enter Your ETH wallet address">
 				<a id="ethaddressbtn" class="btncom" >Here to go</a>
