--- a/src/view/pages/form/index.ejs
+++ b/src/view/pages/form/index.ejs
@@ -23,10 +23,10 @@
 	<section id="roadmap" class="use roadmap">
 		<div class="container" >
 			<div class="wrap-contact100" id="fromresult" style="color: black" >
-			<div>Thanks for participate our bounty program.
-					Get Another 5 Lamb by referring your friends.
-					Your referral link:</div>
-			You	Refer link  <a target="_blank" id="linkhref" href="" style="font-size: 20px;color: #2acde5;word-wrap: break-word" > </a>
+			<div>Congratulation！<br/>
+Your submission is being verified.<br/>
+Your referral link:</div>
+			  <a target="_blank" id="linkhref" href="" style="font-size: 20px;color: #2acde5;word-wrap: break-word" > </a>
 			</div>
 			<div class="wrap-contact100" id="fromdiv">
 				<form id="form" class="contact100-form validate-form">
@@ -63,17 +63,15 @@
 
 					<div class="wrap-input100 validate-input" data-validate="Name is required">
 						<input class="input100" type="text" name="medium" placeholder="Medium user’s name  ">
-						<span class="focus-input100-1"></span>
-						<span class="focus-input100-2"></span>
+						<p  class="Explain" >
+							 <a target="_blank" href="https://medium.com/@Lambdaim">Following Lambda’s Medium</a> 
+					  </p>
 					</div>
 					<div class="wrap-input100 validate-input" data-validate="Name is required">
 						<a class="contact100-form-btn" id="Mediumscreenshot_a">
 							select file
 						</a>
 						<input  accept="image/png, image/jpeg, image/gif, image/jpg" class="input100 fileinput" type="file" id="Mediumscreenshot">
-						<p  class="Explain" >
-							 <a target="_blank" href="https://medium.com/@Lambdaim">Following Lambda’s Medium</a> 
-					  </p>
 						<p  id="Mediumscreenshot_url" class="imgurl"  style="color: black">
 						Please upload the screenshot to prove you followed our Medium
 					  </p>
