--- a/src/css/page/from.less
+++ b/src/css/page/from.less
@@ -395,6 +395,7 @@ textarea.input100 {
 .Explain{
   font-size: 12px;
   color: #00b7ff;
+  color: black;
   a:link{color: #00b7ff}
 
 a:visited{color: #00b7ff}
