--- a/src/view/pages/form/index.ejs
+++ b/src/view/pages/form/index.ejs
@@ -33,47 +33,56 @@ Your referral link:</div>
 
 
 					<div class="wrap-input100 validate-input" data-validate="Name is required">
-						<input class="input100" type="text" id="ethaddress_input" name="ethaddress" placeholder="Your ETH wallet address">
 						<p  class="Explain"  style="color: black">
 							Your ETH wallet address ( listed as user’s unique ID for our verification, link was entered by participant from the first page)
 					  </p>
+						<input class="input100" type="text" id="ethaddress_input" name="ethaddress" placeholder="Your ETH wallet address">
+
 					</div>
 					<div class="wrap-input100 validate-input" data-validate="Name is required">
+						<p  class="Explain" >
+							Joining Lambda Telegram Group: <a target="_blank" href="https://t.me/HelloLambda">https://t.me/HelloLambda</a>
+					  </p>
 						<input class="input100" type="text" name="telegram" placeholder="Your telegram user name ">
-						<p  class="Explain" >
-							<a target="_blank" href="https://t.me/HelloLambda">Joining Lambda Telegram Group</a>
-					  </p>
+
 					</div>
 					<div class="wrap-input100 validate-input" data-validate="Name is required">
+						<p  class="Explain" >
+						 	Following Lambda’ twitter account: <a target="_blank" href="https://twitter.com/Lambdaim"> https://twitter.com/Lambdaim</a> 
+					  </p>
 						<input class="input100" type="text" name="twitter" placeholder="Your Twitter user name ">
-						<p  class="Explain" >
-						 <a target="_blank" href="https://twitter.com/Lambdaim">	Following Lambda’ twitter account</a> 
-					  </p>
+
 					</div>
 					<div class="wrap-input100 validate-input" data-validate="Name is required">
+						<p  class="Explain" >
+						 	 Uploading screenshot for retweet the pinned tweet
+					  </p>
 						<a class="contact100-form-btn" id="twitterscreenshot_a">
 							select file
 						</a>
 						<p style="color: black">
 						<input  accept="image/png, image/jpeg, image/gif, image/jpg" class="input100 fileinput" type="file" id="twitterscreenshot" name="Twitterscreenshot">
-						<p id="twitterscreenshot_url" class="imgurl" style="color: black">Please upload the screenshot to prove you followed our Twitter</p>
+						<p id="twitterscreenshot_url" class="imgurl" style="color: black"> </p>
 					  </p>
 
 					</div>
 
-					<div class="wrap-input100 validate-input" data-validate="Name is required">
+					<!-- <div class="wrap-input100 validate-input" data-validate="Name is required">
+
 						<input class="input100" type="text" name="medium" placeholder="Medium user’s name  ">
-						<p  class="Explain" >
-							 <a target="_blank" href="https://medium.com/@Lambdaim">Following Lambda’s Medium</a> 
-					  </p>
-					</div>
+
+					</div> -->
 					<div class="wrap-input100 validate-input" data-validate="Name is required">
+						<p  class="Explain" >
+							 Following Lambda’s Medium: <a target="_blank" href="https://medium.com/@Lambdaim">https://medium.com/@Lambdaim</a><br/>
+							 Please upload the screenshot to prove you followed our Medium
+					  </p>
 						<a class="contact100-form-btn" id="Mediumscreenshot_a">
 							select file
 						</a>
 						<input  accept="image/png, image/jpeg, image/gif, image/jpg" class="input100 fileinput" type="file" id="Mediumscreenshot">
 						<p  id="Mediumscreenshot_url" class="imgurl"  style="color: black">
-						Please upload the screenshot to prove you followed our Medium
+
 					  </p>
 						<span class="focus-input100-1"></span>
 						<span class="focus-input100-2"></span>
