--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -4,7 +4,7 @@
 		<div class="container" style="text-align: center">
 			<div>
 				<h1 style="    margin-bottom: 30px"> Welcome to Lambda Bounty Program！！</h1>
-				<p style="opacity:0.8;font-size:16px;text-align: left,margin-bottom: 30px">
+				<p style="opacity:0.8;font-size:16px;text-align: left,margin-bottom: 0px">
 					Follow the simple instructions given below and get rewarded in LAMB
 
 				</p>
@@ -25,7 +25,7 @@
 	<section id="roadmap" class="use roadmap" style="padding:0 0 ">
 		<div class="container">
 			<div class="row" style="position:relative">
-      	<div class="col-md-offset-1 col-md-11 box-wrapper">
+      	<div class="col-md-offset-1 col-md-11 ">
 					<div class="row">
       			<div class="col-sm-2 col-xxs-2">
       				<div class="nc-wrapper">
@@ -49,7 +49,7 @@
       			<div class="p-l-0 col-sm-10 col-xxs-10">
       				<div class="year-list">
 
-      					<h2 class="title"> 1,Joining Lambda Telegram Group </h2>
+      					<h2 class="title"> 1.Joining Lambda Telegram Group </h2>
 
       				</div>
       			</div>
@@ -61,7 +61,7 @@
       			<div class="p-l-0 col-sm-10 col-xxs-10">
       				<div class="year-list">
 
-      					<h2 class="title">2,Following Lambda’s twitter account</h2>
+      					<h2 class="title">2.Following Lambda’s twitter account</h2>
 
       				</div>
       			</div>
@@ -73,7 +73,7 @@
       			<div class="p-l-0 col-sm-10 col-xxs-10">
       				<div class="year-list">
 
-      					<h2 class="title">3,Retweeting Lambda’s pinned message on Twitter </h2>
+      					<h2 class="title">3.Retweeting Lambda’s pinned message on Twitter </h2>
 
       				</div>
       			</div>
@@ -85,7 +85,7 @@
 
       			<div class="p-l-0 col-sm-10 col-xxs-10">
       				<div class="year-list">
-								 <h2 class="title">4,Following Lambda’s Medium</h2>
+								 <h2 class="title">4.Following Lambda’s Medium</h2>
 
       				</div>
 							<ul style="">
@@ -94,8 +94,8 @@
 								<li style="">&nbsp;</li>
 				<li style="">
 				Campaign Rules:</li>
-								<li>This campaign will last from  July. 3rd to July.17th  </li>
-								<li>You can earn up to 50 Lamb tokens during this campaign </li>
+								<li>-This campaign will last from  July. 3rd to July.17th  </li>
+								<li>-You can earn up to 50 Lamb tokens during this campaign </li>
 
 
 								</div>
