--- a/src/view/partial/header.ejs
+++ b/src/view/partial/header.ejs
@@ -40,7 +40,7 @@
 							</a>
 						</div>
 						<div class="nav-item mao" >
-							<a target="_blank" href="https://twitter.com/Lambda39241229">
+							<a target="_blank" href="https://twitter.com/Lambdaim">
 								Twitter
 							</a>
 						</div>
@@ -74,10 +74,11 @@
 							<li class="mao"><a href="javascript:;">生态系统</a></li>
 							<li class="mao"><a href="javascript:;">路线图</a></li>
 							<% } else if(pageId === 'indexEn'){ %>
-								<li target="_blank" class="mao"><a href="https://www.lambda.im/en/index.html">Home</a></li>
-								<li target="_blank" class="mao"><a href="http://www.lambda.im/doc/Lambda-WhitePaper-en.pdf">Download whitepaper</a></li>
-								<li target="_blank" class="mao"><a href="https://twitter.com/Lambda39241229">Twitter</a></li>
-								<li target="_blank" class="mao"><a href="https://t.me/Lambdaim">Telegram</a></li>
+								<li  class="mao"><a target="_blank" href="https://www.lambda.im/en/index.html">Home</a></li>
+								<li  class="mao"><a target="_blank" href="http://www.lambda.im/doc/Lambda-WhitePaper-en.pdf">Download whitepaper</a></li>
+								<li  class="mao"><a target="_blank" href="https://twitter.com/Lambdaim">Twitter</a></li>
+								<li  class="mao"><a target="_blank" href="https://t.me/Lambdaim">Telegram</a></li>
+								<li  class="mao"><a target="_blank" href="https://medium.com/@Lambdaim">Medium</a></li>
 							<% } %>
 						</ul>
 					</div>
