--- a/src/view/partial/header.ejs
+++ b/src/view/partial/header.ejs
@@ -45,7 +45,7 @@
 							</a>
 						</div>
 						<div class="nav-item mao" >
-							<a target="_blank" href="https://t.me/Lambdaim" >
+							<a target="_blank" href="https://t.me/HelloLambda" >
 								Telegram
 							</a>
 						</div>
@@ -77,7 +77,7 @@
 								<li  class="mao"><a target="_blank" href="https://www.lambda.im/en/index.html">Home</a></li>
 								<li  class="mao"><a target="_blank" href="http://www.lambda.im/doc/Lambda-WhitePaper-en.pdf">Download whitepaper</a></li>
 								<li  class="mao"><a target="_blank" href="https://twitter.com/Lambdaim">Twitter</a></li>
-								<li  class="mao"><a target="_blank" href="https://t.me/Lambdaim">Telegram</a></li>
+								<li  class="mao"><a target="_blank" href="https://t.me/HelloLambda">Telegram</a></li>
 								<li  class="mao"><a target="_blank" href="https://medium.com/@Lambdaim">Medium</a></li>
 							<% } %>
 						</ul>
