--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -3,28 +3,23 @@
 	<section class="banner-contents" style=" margin-bottom: 0px;padding-bottom:0px">
 		<div class="container" style="text-align: center">
 			<div>
-				<h1 style="    margin-bottom: 30px"> Welcome to Lambda Bounty Program！！</h1>
+				<h1 style="    margin-bottom: 30px"> Let's Rebuild EOS World Together!</h1>
 				<p style="opacity:0.8;font-size:16px;text-align: left,margin-bottom: 30px">
-					Follow the simple instructions given below and get rewarded in LAMB
+					Working with the EOS community to reconstruct the Internet of “freedom, equality, and respect”
+
 
 				</p>
 				<!-- <h2 style="    margin-bottom: 30px" >You can earn up to 50 Lamb tokens during this campaign</h2> -->
 
 
 				      					<ul>
-				      						<li>Get Another 5 Lamb by referring your friends to participate our bounty program
-Campaign Rules.</li>
-				      						<li>This campaign will last from July 2nd to July.16th </li>
-													<li>You can earn up to 50 Lamb tokens during this campaign </li>
+
 
 													<p id="ethbtn" >
-														<input id="ethaddress"  class="input100" type="text" name="ethaddress" placeholder="Your ETH wallet address">
-														<a id="ethaddressbtn" class="btncom" >click Here to go</a>
+
+														<a id="ethaddressbtn" class="btncom" >MAKE EOS GREAT</a>
 													</p>
-													<div id="link" >
-												You	Refer link  <a target="_blank" id="linkhref" href="" style="font-size: 20px;color: #2acde5;    word-wrap: break-word" > </a>
-													<p><a id="ethaddressfrom" class="btncom" >Submit </a></p>
-													</div>
+
 
 
 
@@ -37,68 +32,307 @@ Campaign Rules.</li>
 
 		</div>
 	</section>
+	<section  id="design" class="use design">
+		<div class="container">
+			<h1>What is</h1>
+			<span>LAMDBA POOL</span>
+			<div >
+				<h1>Provide unlimited storage capabilities</h1>
+				<h2>a decentralized application infrastructure  Lambda</h2>
+				<p style="opacity:0.8;font-size:14px">Lambda is a high-speed, secure and scalable blockchain infrastructure project. Through the logical decoupling and separate implementation of Lambda Chain and Lambda DB, we provide infinitely scalable data storage capabilities to decentralized applications and achieve Multi-chain data cooperative storage, cross-chain data management, data privacy protection, data ownership proof, distributed intelligent computing and other services. Additionally, as the underlying service of blockchain, Lambda Chain provides millions of requests per second (RPS) through Sharding technology, which can grow as the scale of the system expands; and it also offers technology service capabilities for future unlimited expansion through sub-chain technology.</p>
 
+			</div>
 
-
+		</div>
+	</section>
+	<section id="design" class="use design">
+		<div class="container">
+			<h1>What do we do for</h1>
+			<span>EOS community</span>
+			<div class="row">
+				<div class="jgsj col-md-4 col-sm-4 ">
+					<div class="intro-wrapper">
+						<div class="jg-circle"></div>
+						<p class="title">Lambda Chain</p>
+						<p class="intro">An isomorphic multi-chain system Lambda Chain, providing high TPS access capabilities, Turing-complete smart contracts, cross-chain trading capabilities, etc.</p>
+					</div>
+					<div class="intro-wrapper">
+						<div class="jg-circle"></div>
+						<p class="title">Lambda P2P</p>
+						<p class="intro">A p2p network system Lambda p2p, providing network layer addressability</p>
+					</div>
+					<div class="intro-wrapper">
+						<div class="jg-circle"></div>
+						<p class="title">Lambda DB</p>
+						<p class="intro">A multi-database cluster system Lambda DB, providing unlimited encrypted secure data storage</p>
+					</div>
+				</div>
+				<div class="jgsj col-md-4 col-sm-4 ">
+					<div class="intro-wrapper">
+						<div class="jg-circle"></div>
+						<p class="title">Lambda DB的底层结构支撑系统</p>
+						<p class="intro">A Lambda DB underlying infrastructure supporting system, including a block storage system and a distributed file system Lambda FS</p>
+					</div>
+					<div class="intro-wrapper">
+						<div class="jg-circle"></div>
+						<p class="title">Lambda ABE</p>
+						<p class="intro">An attribute-based encryption authentication access system composed of multi-node consensus Lambda ABE, the access control gateways to databases</p>
+					</div>
+				</div>
+				<div class="jgsj col-md-4 col-sm-4 ">
+					<div class="intro-wrapper">
+						<div class="jg-circle"></div>
+						<p class="title">Lambda TPA</p>
+						<p class="intro">A data integrity verification group consisting of multiple verifier nodes Lambda TPA Chain</p>
+					</div>
+					<div class="intro-wrapper">
+						<div class="jg-circle"></div>
+						<p class="title">Lambda Agent</p>
+						<p class="intro">An adaptive probe system Lambda Agent, providing memory data storage, performance monitoring, security monitoring and Metrics data uploading capabilities</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<section id="roadmap" class="use roadmap">
 		<div class="container">
-			<h1>Get 50 LAMB by </h1>
-
+			<h1>ROADMAP</h1>
+			<span>ROADMAP</span>
 			<div class="row" style="position:relative">
       	<div class="col-md-offset-1 col-md-11 box-wrapper">
       		<div class="row">
       			<div class="col-sm-2 col-xxs-2">
       				<div class="nc-wrapper">
-
+      					<span class="left-num color-show">1</span>
+      					<div class="circle-icon ">
+      						<div class="column-line "></div>
+      						<i></i>
+      					</div>
       				</div>
       			</div>
       			<div class="p-l-0 col-sm-10 col-xxs-10">
       				<div class="year-list">
-
-      					<h2 class="title"> Joining Lambda Telegram Group </h2>
-
+      					<span class="num">2017 Q4</span>
+      					<h2 class="title">Lambda technology demonstration and research</h2>
+      					<ul>
+      	 					<li>In-depth study the technology architecture of public chains and basic protocol, and the core team read a lot of codes and papers</li>
+      						<li>Demonstrate the calculation and storage model of massive data in the Permissionless environment</li>
+      						<li>Demonstrate the connection between OAS business model and Token economy</li>
+      					</ul>
       				</div>
       			</div>
       		</div>
       		<div class="row">
       			<div class="col-sm-2 col-xxs-2">
-
+      				<div class="nc-wrapper">
+      					<span class="left-num color-show">2</span>
+      					<div class="circle-icon">
+      						<i></i>
+      					</div>
+      				</div>
       			</div>
       			<div class="p-l-0 col-sm-10 col-xxs-10">
       				<div class="year-list">
-
-      					<h2 class="title">Following Lambda’s twitter account</h2>
-
+      					<span class="num">2018 Q1</span>
+      					<h2 class="title">Lambda technology demonstration and research</h2>
+      					<ul>
+      						<li>Choose an appropriate blockchain consensus mechanism, determine to adopt the high-speed chain design of the Sharding program, and the HoneyBadgerBFT consensus algorithm of the subchain</li>
+      						<li>Determine to adopt multi-sub-chain design that Request and Reponse record separately</li>
+      						<li>Perfect the separated structural design of the chain storehouses</li>
+      						<li>Determine to adopt the data ownership proofs of PDP and access control and encryption mechanisms of ABE</li>
+      						<li>Determine the technological route and technological program</li>
+      						<li>Complete the technological white paper</li>
+      					</ul>
       				</div>
       			</div>
       		</div>
       		<div class="row">
       			<div class="col-sm-2 col-xxs-2">
-
+      				<div class="nc-wrapper">
+      					<span class="left-num color-show">3</span>
+      					<div class="circle-icon ">
+      						<i></i>
+      					</div>
+      				</div>
       			</div>
       			<div class="p-l-0 col-sm-10 col-xxs-10">
       				<div class="year-list">
-
-      					<h2 class="title">Retweeting Lambda’s pinned message on Twitter </h2>
-
+      					<span class="num">2018 Q3</span>
+      					<h2 class="title">Lambda core component development</h2>
+      					<ul>
+      						<li>Evaluate and test the performance of libp2p and devp2p, and modify the code .</li>
+      						<li>Implement the underlying data block storage system.</li>
+      						<li>Technology validation of Lambda FS by closed-source development of Lambda Chain</li>
+      						<li>Community development and real-time open source of Lambda FS </li>
+      						<li>Implement Lambda database based on Lambda FS</li>
+      						<li>Develop Lambda Agent based on hot language to facilitate integration with existing application</li>
+      					</ul>
       				</div>
       			</div>
       		</div>
-					<div class="row">
-						<div class="col-sm-2 col-xxs-2">
-
-						</div>
-
+      		<div class="row">
+      			<div class="col-sm-2 col-xxs-2">
+      				<div class="nc-wrapper">
+      					<span class="left-num color-show">4</span>
+      					<div class="circle-icon">
+      						<i></i>
+      					</div>
+      				</div>
+      			</div>
       			<div class="p-l-0 col-sm-10 col-xxs-10">
       				<div class="year-list">
-								 <h2 class="title">Following Lambda’s Medium</h2>
-
+      					<span class="num">2018 Q4</span>
+      					<h2 class="title">Lambda Chain test network development</h2>
+      					<ul>
+      						<li>P2P network development is used to synchronize blockchain ledgers and storage data.</li>
+      						<li>Virtual machine development and development and validation of built-in contracts</li>
+      						<li>API interface, RPC interface, command line and peripheral tools development</li>
+      						<li>Open source Lambda Chain</li>
+      					</ul>
       				</div>
       			</div>
       		</div>
-
+      		<div class="row">
+      			<div class="col-sm-2 col-xxs-2">
+      				<div class="nc-wrapper">
+      					<span class="left-num color-show">5</span>
+      					<div class="circle-icon ">
+      						<i></i>
+      					</div>
+      				</div>
+      			</div>
+      			<div class="p-l-0 col-sm-10 col-xxs-10">
+      				<div class="year-list">
+      					<span class="num">2019 Q1</span>
+      					<h2 class="title">Test network construction and development based on Lambda paradigms</h2>
+      					<ul>
+      						<li>Build a large-scale test network based on community and conduct comprehensive testing</li>
+      						<li>Issue LDA to encourage early community enthusiasts to develop Lambda-based application paradigms</li>
+      						<li>Test and correct the security and business vulnerabilities of the application paradigms based on the test network</li>
+      					</ul>
+      				</div>
+      			</div>
+      		</div>
+      		<div class="row">
+      			<div class="col-sm-2 col-xxs-2">
+      				<div class="nc-wrapper">
+      					<span class="left-num color-show">6</span>
+      					<div class="circle-icon">
+      						<i></i>
+      					</div>
+      				</div>
+      			</div>
+      			<div class="p-l-0 col-sm-10 col-xxs-10">
+      				<div class="year-list">
+      					<span class="num">2019 Q2</span>
+      					<h2 class="title">Expansion of other data service capabilities and data transactions</h2>
+      					<ul>
+      						<li>Launched by the Foundation to encourage more data storage and database service capabilities to access the Lambda ecosystem</li>
+      						<li>Explore data transactions business scenarios and patterns within the Lambda ecosystem</li>
+      					</ul>
+      				</div>
+      			</div>
+      		</div>
       	</div>
       </div>
+		</div>
+	</section>
+	<section id="team" class="use team">
+		<div class="container">
+			<h1>CORE TEAM</h1>
+			<div class="row team-wrapper">
+				<div class="col-md-2 col-xxs-4">
+					<div class="head">
+						<div class="head-wrapper">
+							<img src="<%= require('../../img/index/hxy.png') %>" alt="">
+						</div>
+						<p class="name">何晓阳</p>
+					</div>
+				</div>
+				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
+					<div class="head">
+						<div class="head-wrapper">
+							<img src="<%= require('../../img/index/lmn.png') %>" alt="">
+						</div>
+						<p class="name">李沫南</p>
+					</div>
+				</div>
+				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
+					<div class="head">
+						<div class="head-wrapper">
+							<img src="<%= require('../../img/index/alex.png') %>" alt="">
+						</div>
+						<p class="name">Alex Lototskiy</p>
+					</div>
+				</div>
+				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
+					<div class="head">
+						<div class="head-wrapper">
+							<img src="<%= require('../../img/index/hbq.png') %>" alt="">
+						</div>
+						<p class="name">何冰清</p>
+					</div>
+				</div>
+				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
+					<div class="head">
+						<div class="head-wrapper">
+							<img src="<%= require('../../img/index/ghq.png') %>" alt="">
+						</div>
+						<p class="name">郭宏强</p>
+					</div>
+				</div>
+				<div class="col-md-2 col-xxs-4">
+					<div class="head">
+						<div class="head-wrapper">
+							<img src="<%= require('../../img/index/gaohq.png') %>" alt="">
+						</div>
+						<p class="name">高海强</p>
+					</div>
+				</div>
+				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
+					<div class="head">
+						<div class="head-wrapper">
+							<img src="<%= require('../../img/index/Oleg.png') %>" alt="">
+						</div>
+						<p class="name">Oleg Lyamtsev</p>
+					</div>
+				</div>
+				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
+					<div class="head">
+						<div class="head-wrapper">
+							<img src="<%= require('../../img/index/zhj.png') %>" alt="">
+						</div>
+						<p class="name">赵海俊</p>
+					</div>
+				</div>
+			</div>
+
+		</div>
+	</section>
+
+
+
+	<section id="partners" class="use partners">
+		<div class="container">
+			<h1>PARTNERS</h1>
+
+			<div class="row partners-wrapper">
+				<!-- <div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+					<div class="partners-logo">
+						<img src="<%= require('../../img/index/apache.png') %>" alt="">
+					</div>
+				</div> -->
+				<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+					<div class="partners-logo">
+						<img src="<%= require('../../img/index/oneapm.png') %>" alt="">
+					</div>
+				</div>
+				<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+					<div class="partners-logo partners-logoyfy">
+						<img class="yfy" src="<%= require('../../img/index/yfy.png') %>" alt="">
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
 
