--- a/src/view/partial/header.ejs
+++ b/src/view/partial/header.ejs
@@ -56,8 +56,8 @@
 						</div>
 					<% } %>
 					<div class="nav-item" style="float:right">
-						<!-- <a href="/en/index.html" style="display: inline-block; width: 30px; height: 20px;"><img style="width: 100%; height:100%" src="<%= require('../../img/public/english@2x.png') %>" alt=""></a>
-						<a href="/index.html" style="display: inline-block; width: 30px; height: 20px;" ><img style="width: 100%; height: 100%" src="<%= require('../../img/public/china@2x.png') %>" alt=""></a> -->
+						<a href="/en/index.html" style="display: inline-block; width: 30px; height: 20px;"><img style="width: 100%; height:100%" src="<%= require('../../img/public/english@2x.png') %>" alt=""></a>
+						<a href="/index.html" style="display: inline-block; width: 30px; height: 20px;" ><img style="width: 100%; height: 100%" src="<%= require('../../img/public/china@2x.png') %>" alt=""></a>
 					</div>
 				</div>
 				<div class="navbar-toggle-btn">
@@ -93,7 +93,10 @@
 					</div> -->
 
 					<div class="nav-item" id="language">
-
+						<ul>
+													<li><a href="/index.html">中文</a></li>
+													<li><a href="/en/index.html">English</a></li>
+												</ul>
 					</div>
 				</div>
 			</div>
